--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
   <div class="grid push-0">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 island">
       <a href="#" class="card island-1-2 block text-center pad-b-0">
-        <i class="icon i-64">
+        <i class="icon i-64 pad-t-1-4">
           <img class="img-flex" src="images/placeholder-hex.svg" alt="">
         </i>
-        <h2 class="text-center pad-t-1-2 exa">Human Paladin</h2>
-        <p class="mega margin text-center italic">Dedicated to the everlasting oath of honour, justice and goodness.</p>
+        <h2 class="text-center pad-t tera gutter-1-2">Human Paladin</h2>
+        <p class="kilo margin text-center italic">Dedicated to the everlasting oath of honour, justice and goodness.</p>
         <span class="btn btn-ghost">Choose Paladin</span>
       </a>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-1-4">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 island">
       <a href="#" class="card island-1-2 block text-center pad-b-0">
-        <i class="icon i-64">
+        <i class="icon i-64 pad-t-1-4">
           <img class="img-flex" src="images/placeholder-hex.svg" alt="">
         </i>
-        <h2 class="text-center pad-t-1-2 exa">Drow Rogue</h2>
-        <p class="mega margin text-center italic">A near invincible killer who’s craft was honed in the dark caves.</p>
+        <h2 class="text-center pad-t tera">Drow Rogue</h2>
+        <p class="kilo margin text-center italic">A near invincible killer who’s craft was honed in the dark caves.</p>
         <span class="btn btn-ghost">Choose Rogue</span>
       </a>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 island">
       <a href="#" class="card island-1-2 block text-center pad-b-0">
-        <i class="icon i-64 ">
+        <i class="icon i-64 pad-t-1-4">
           <img class="img-flex" src="images/placeholder-hex.svg" alt="">
         </i>
-        <h2 class="text-center pad-t-1-2 exa">Wood Elf Ranger</h2>
-        <p class="mega margin text-center italic">A rugged individualist who survives on wits, will and muscle..</p>
+        <h2 class="text-center pad-t tera">Wood Elf Ranger</h2>
+        <p class="kilo margin text-center italic">A rugged individualist who survives on wits, will and muscle..</p>
         <span class="btn btn-ghost">Choose Ranger</span>
       </a>
     </div>
